--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@
 
 
       .hero-text h1{
-          font-size:1em !important;
+          font-size:2.3em !important;
           top:150px !important;
           width:100vw;
          left:0 !important;
@@ -132,7 +132,7 @@
     max-width:20vw;
     position:absolute;
     z-index:500;
-    top:45vh;
+    top:326px;
     left:25px; 
     height:20vh;
 }
