--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,13 @@
         text-align:center;
     }
       
+    .hero-text h1{
+        font-size:3em !important;
+    }
+
+    .hero-text h2{
+        font-size:2em !important;
+    }
 
     .logo-1 { 
        display:flex;
